# DiveCANHead

./: .gitignore  .gitmodules  CLAUDE.md  Controller.kicad_sch  DiveCAN Head.csv  DiveCAN Head.kicad_pcb  DiveCAN Head.kicad_prl  DiveCAN Head.kicad_pro  DiveCAN Head.kicad_sch  DiveCAN Head.kicad_sch-bak  DiveCAN Head2.kicad_pcb  DiveCAN Head2.kicad_prl  DiveCAN Head2.kicad_pro  DiveCAN Head2.kicad_sch  DiveCAN Head2.step  DiveCAN Retainer.stl  Housing.20231024-162418.FCBak  Housing.3mf  Housing.FCStd  Housing.FCStd1  Housing.stl  LICENSE  Project.bak  Project.kicad_sym  README.md  SS_Cell.kicad_sch  UDS_plan.md  _autosave-DiveCAN Head2.kicad_pcb  batteryConverter.kicad_sch  cantrace.txt  errors_from_the_wild.txt  flash_can.sh  flash_serial.sh  fp-info-cache  requirements.txt  sonar-project.properties  sym-lib-table  ~DiveCAN Head2.kicad_pcb.lck  ~DiveCAN Head2.kicad_sch.lck
CAD/: Body (Meshed)001.stl  Cable Retainer.FCStd  DiveCAN Retainer.stl  Housing.FCStd
Configurator/: bootloader-test.py  main.py
DiveCAN_bt/: .gitignore  QUICKSTART.md  README.md  package-lock.json  (+2 more)
Firmware/: .gitignore  .sonarqube-diagnostics-ppo2-final.txt  .sonarqube-only.json  ARCHITECTURE.md  BENCHTEST.md  CLAUDE.md  CMakeLists.txt  COMPROMISE.md  Kconfig  UDS.md  flash.sh  prj.conf  sonar-project.properties  sysbuild.conf  west.yml
Firmware/boards/quickrecon/divecan_jr/: Kconfig.divecan_jr  board.cmake  board.yml  divecan_jr.dts  divecan_jr_defconfig
Firmware/docs/: SONARQUBE_ACCEPTED_ISSUES.md  STATE_MACHINES.md
Firmware/drivers/gpio_sim/: CMakeLists.txt  Kconfig  gpio_sim.c  gpio_sim.h
Firmware/drivers/solenoid/: CMakeLists.txt  Kconfig  solenoid.c
Firmware/dts/bindings/: quickrecon,gpio-sim.yaml  quickrecon,hw-version.yaml  quickrecon,power-subsystem.yaml  quickrecon,solenoid-driver.yaml
Firmware/include/: calibration.h  common.h  error_histogram.h  errors.h  heartbeat.h  oxygen_cell_channels.h  oxygen_cell_math.h  oxygen_cell_types.h  power_management.h  ppo2_control.h  ppo2_control_math.h  runtime_settings.h  solenoid.h  solenoid_roles.h
Firmware/scripts/: dbg_chip_state.sh  lint_variant.sh  native_test.py  sign_app.py  test_mcuboot_reject.sh
Firmware/src/: Kconfig  Kconfig.factory_image  Kconfig.firmware_confirm  calibration.c  consensus_subscriber.c  error_histogram.c  errors.c  factory_image.c  factory_image.h  factory_image_backend.h  factory_image_backend_flash.c  firmware_confirm.c  firmware_confirm.h  heartbeat.c  hw_version.c  main.c  option_bytes.c  oxygen_cell_analog.c  oxygen_cell_channels.c  oxygen_cell_diveo2.c  oxygen_cell_math.c  oxygen_cell_o2s.c  power_management.c  power_math.c  ppo2_control.c  ppo2_control_math.c  runtime_settings.c  watchdog_feeder.c
Firmware/src/divecan/: divecan_channels.c  divecan_ppo2_math.c  divecan_ppo2_tx.c  divecan_rx.c  divecan_send.c  divecan_tx.c  isotp.c  isotp_tx_queue.c
Firmware/src/divecan/include/: divecan_channels.h  divecan_counters.h  divecan_ppo2_math.h  divecan_tx.h  divecan_types.h  isotp.h  isotp_tx_queue.h  uds.h  uds_log_push.h  uds_ota.h  uds_settings.h  uds_state_did.h
Firmware/src/divecan/uds/: uds.c  uds_log_push.c  uds_ota.c  uds_settings.c  uds_state_did.c
Firmware/sysbuild/: mcuboot.conf
Firmware/tests/: CMakeLists.txt
Firmware/tests/analog_math/: CMakeLists.txt  testcase.yaml
Firmware/tests/analog_math/src/: main.c
Firmware/tests/calibration_math/: CMakeLists.txt  testcase.yaml
Firmware/tests/calibration_math/src/: main.c
Firmware/tests/calibration_sm/: CMakeLists.txt  prj.conf  testcase.yaml
Firmware/tests/calibration_sm/src/: main.c
Firmware/tests/consensus/: CMakeLists.txt  testcase.yaml
Firmware/tests/consensus/src/: main.c
Firmware/tests/divecan_tx/: CMakeLists.txt  testcase.yaml
Firmware/tests/divecan_tx/src/: divecan_send_stub.c  main.c
Firmware/tests/error_histogram/: CMakeLists.txt  prj.conf
Firmware/tests/error_histogram/src/: main.c
Firmware/tests/factory_image/: CMakeLists.txt  Kconfig  prj.conf
Firmware/tests/factory_image/src/: main.c
Firmware/tests/firmware_confirm/: CMakeLists.txt  Kconfig  prj.conf
Firmware/tests/firmware_confirm/src/: main.c
Firmware/tests/heartbeat/: CMakeLists.txt
Firmware/tests/heartbeat/src/: main.c
Firmware/tests/integration/: Kconfig  SANITIZERS.md  integration.conf  sanitizers.conf
Firmware/tests/integration/boards/: native_sim.overlay
Firmware/tests/integration/harness/: LOOP_PHYSICS.md  conftest.py  divecan.py  helpers.py  pytest.ini  rebreather_model.py  requirements.txt  sim_shim.py  test_calibration.py  test_pid_stability.py  test_ping.py  test_ppo2.py  test_ppo2_control.py  test_pwr_management.py  test_uds.py  test_uds_did_ota.py  test_uds_ota.py  uds.py  uds_ota.py
Firmware/tests/integration/src/: test_shim.c  test_shim_adc.c  test_shim_adc.h  test_shim_gpio.c  test_shim_gpio.h  test_shim_shared.c  test_shim_shared.h  test_shim_socket.c  test_shim_socket_adapt.c  test_shim_uart.c  test_shim_uart.h
Firmware/tests/isotp/: CMakeLists.txt  prj.conf  testcase.yaml
Firmware/tests/isotp/src/: divecan_tx_stub.c  divecan_tx_stub.h  main.c
Firmware/tests/parsers/: CMakeLists.txt  prj.conf  testcase.yaml
Firmware/tests/parsers/boards/: native_sim.overlay
Firmware/tests/parsers/src/: test_diveo2.c  test_o2s.c
Firmware/tests/power/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
Firmware/tests/power/boards/: native_sim.overlay
Firmware/tests/power/src/: main.c
Firmware/tests/ppo2_broadcast/: CMakeLists.txt  testcase.yaml
Firmware/tests/ppo2_broadcast/src/: main.c
Firmware/tests/ppo2_control_math/: CMakeLists.txt  testcase.yaml
Firmware/tests/ppo2_control_math/src/: main.c
Firmware/tests/uds_ota/: CMakeLists.txt  prj.conf
Firmware/tests/uds_ota/src/: main.c
Firmware/tests/uds_state_did_ota/: CMakeLists.txt  prj.conf
Firmware/tests/uds_state_did_ota/include/: power_management.h
Firmware/tests/uds_state_did_ota/src/: main.c
Firmware/tests/zbus_integration/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
Firmware/tests/zbus_integration/src/: main.c
Firmware/variants/: dev_full.conf
(+622 files in other folders)
